--- a/01-workspace/03-kafka-cluster/props/s1.properties
+++ b/01-workspace/03-kafka-cluster/props/s1.properties
@@ -8,7 +8,7 @@ controller.quorum.voters=1@kafka1:9093,2@kafka2:9093,3@kafka3:9093
 
 # PLAINTEXT
 # SSL
-# SASL_PLAINTEXT
+# SASL_PLAINTEXT - Simple authentication secure layer
 # SASL_SSL
 
 listener.security.protocol.map=CONTROLLER:PLAINTEXT,INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
